# h323p

./: .gitignore  .gitmodules  ARCH_PROJECT.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  QWEN.md  README.md  STAGE1.md  STAGE1_EXPECTATIONS.md  STAGE2.md  STAGE2_EXPECTATIONS.md  STAGE3.md  STAGE4.md  STAGE5.md  STAGE6.md  STAGE7.md
.github/workflows/: build.yml
.qwen/: PROJECT_SUMMARY.md  context.md
.qwen/history/: qwen-code-export-2026-03-16T09-27-22-028Z.md
cmake/: FindH323Plus.cmake  FindPTLib.cmake
scripts/: build_deps.sh
src/: main.cpp
src/cli/: cli_parser.cpp  cli_parser.hpp  commands.hpp
src/core/: call.cpp  call.hpp  call_manager.cpp  call_manager.hpp  endpoint.cpp  endpoint.hpp
src/h323/: call_states.hpp  gatekeeper_manager.cpp  gatekeeper_manager.hpp  h323_endpoint.cpp  h323_endpoint.hpp  h323_errors.cpp  h323_errors.hpp  h323_event_handler.cpp  h323_event_handler.hpp  q931.cpp  q931.hpp  q931_logger.cpp  q931_logger.hpp  ras.cpp  ras.hpp
src/utils/: logging.cpp  logging.hpp  retry.hpp  timeout.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_cli_parser.cpp  test_integration.cpp  test_logging.cpp  test_main.cpp  test_timer.cpp  test_utils.cpp
